--- a/app/index.html
+++ b/app/index.html
@@ -63,7 +63,10 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/factories/account.js"></script>
         <script src="scripts/factories/stats.js"></script>
+        <script src="scripts/factories/inventory.js"></script>
+        <script src="scripts/factories/armor.js"></script>
         <script src="scripts/factories/weapon.js"></script>
+        <script src="scripts/factories/class.js"></script>
         <!-- endbuild -->
 </body>
 </html>
