--- a/app/index.html
+++ b/app/index.html
@@ -30,11 +30,9 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <!-- Add your site or application content here -->
-      <div ng-view=""></div>
+    <div ng-view=""></div>
 
-    <div class="footer">
-    </div>
+    <div class="footer"></div>
 
     <script>
       !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
@@ -94,5 +92,5 @@
     <script src="scripts/factories/weapon.js"></script>
     <script src="scripts/factories/class.js"></script>
     <!-- endbuild -->
-</body>
+  </body>
 </html>
