--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
 
     <div ng-view=""></div>
 
-    <footer class="footer">
+    <footer class="footer hidden-xs">
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-sm-12">
