--- a/app/index.html
+++ b/app/index.html
@@ -79,11 +79,11 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-    <!-- build:js({.tmp,app}) scripts/definitions.js -->
-    <script type="text/javascript" src="scripts/definitions/class.js"></script>
-    <script type="text/javascript" src="scripts/definitions/armor.js"></script>
-    <script type="text/javascript" src="scripts/definitions/weapons.js"></script>
-    <script type="text/javascript" src="scripts/definitions/medals.js"></script>
+    <!-- build:js({.tmp,app}) scripts/definitions/en/definitions.js -->
+    <script type="text/javascript" src="scripts/definitions/en/DestinyClassDefinition.js"></script>
+    <script type="text/javascript" src="scripts/definitions/en/DestinyArmorDefinition.js"></script>
+    <script type="text/javascript" src="scripts/definitions/en/DestinyWeaponDefinition.js"></script>
+    <script type="text/javascript" src="scripts/definitions/en/DestinyMedalDefinition.js"></script>
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
