added permalink functionality

--- a/app/index.html
+++ b/app/index.html
@@ -76,6 +76,8 @@
     <script src="bower_components/angulartics/src/angulartics-newrelic-insights.js"></script>
     <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
     <script src="bower_components/angular-toastr/dist/angular-toastr.tpls.js"></script>
+    <script src="bower_components/zeroclipboard/dist/ZeroClipboard.js"></script>
+    <script src="bower_components/angular-zeroclipboard/src/angular-zeroclipboard.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
