initial chardon.js and dummy data

--- a/app/index.html
+++ b/app/index.html
@@ -86,10 +86,13 @@
     <script type="text/javascript" src="scripts/definitions/en/DestinyArmorDefinition.js"></script>
     <script type="text/javascript" src="scripts/definitions/en/DestinyWeaponDefinition.js"></script>
     <script type="text/javascript" src="scripts/definitions/en/DestinyMedalDefinition.js"></script>
+    <script type="text/javascript" src="scripts/definitions/DummyData.js"></script>
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="./lib/$QDecorator.js"></script>
+    <script src="./lib/chardinjs.min.js"></script>
+    <script src="./lib/angular-help-overlay.js"></script>
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/factories/account.js"></script>
