remove api definitions and add static file

--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
 <html class="no-js">
   <head>
     <base href="/">
+    <meta name="fragment" content="!">
     <meta charset="utf-8">
     <title>Destiny Trials Report</title>
     <meta name="description" content="">
@@ -87,6 +88,7 @@
     <script type="text/javascript" src="scripts/definitions/en/DestinyArmorDefinition.js"></script>
     <script type="text/javascript" src="scripts/definitions/en/DestinyWeaponDefinition.js"></script>
     <script type="text/javascript" src="scripts/definitions/en/DestinyMedalDefinition.js"></script>
+    <script type="text/javascript" src="scripts/definitions/en/DestinyTrialsDefinition.js"></script>
     <script type="text/javascript" src="scripts/definitions/DummyData.js"></script>
     <!-- endbuild -->
 
