--- a/app/index.html
+++ b/app/index.html
@@ -82,12 +82,12 @@
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/definitions/en/definitions.js -->
-    <script type="text/javascript" src="scripts/definitions/en/DestinyClassDefinition.js"></script>
-    <script type="text/javascript" src="scripts/definitions/en/DestinyArmorDefinition.js"></script>
-    <script type="text/javascript" src="scripts/definitions/en/DestinyWeaponDefinition.js"></script>
-    <script type="text/javascript" src="scripts/definitions/en/DestinyMedalDefinition.js"></script>
-    <script type="text/javascript" src="scripts/definitions/en/DestinyTrialsDefinition.js"></script>
-    <script type="text/javascript" src="scripts/definitions/DummyData.js"></script>
+    <script src="scripts/definitions/en/DestinyClassDefinition.js"></script>
+    <script src="scripts/definitions/en/DestinyArmorDefinition.js"></script>
+    <script src="scripts/definitions/en/DestinyWeaponDefinition.js"></script>
+    <script src="scripts/definitions/en/DestinyMedalDefinition.js"></script>
+    <script src="scripts/definitions/en/DestinyTrialsDefinition.js"></script>
+    <script src="scripts/definitions/DummyData.js"></script>
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -102,6 +102,7 @@
     <script src="scripts/factories/armor.js"></script>
     <script src="scripts/factories/weapon.js"></script>
     <script src="scripts/factories/class.js"></script>
+    <script src="scripts/templates.js"></script>
     <!-- endbuild -->
   </body>
 </html>
