seo & temp Google webmaster verification

--- a/app/index.html
+++ b/app/index.html
@@ -1,13 +1,16 @@
 <!doctype html>
 <html class="no-js">
   <head>
-    <base href="/">
-    <meta name="fragment" content="!">
-    <meta charset="utf-8">
     <title>Destiny Trials Report</title>
-    <meta name="description" content="">
+    <meta name="description" content="Destiny Trials Report is the ultimate companion for Destiny's Trials of Osiris.
+      Look up a Guardian to see every statistic you can imagine on the enemy Fireteam. Be prepared going into a match, and it may even improve your game.">
+    <meta name="keywords" content="destiny,trials of osiris,crucible,trials report,destiny trials report,trials,destiny trials">
+    <meta name="robots" content="index, follow">
+    <meta name="fragment" content="!">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <!-- Temporary for Google Webmaster Tools -->
+    <meta name="google-site-verification" content="fYahdT7rpOlhv58zHhJu0J8IoY9ALWy4Md0PyMjghHA">
+    <base href="/">
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css" />
