--- a/app/index.html
+++ b/app/index.html
@@ -79,7 +79,9 @@
 
     <!-- build:js({.tmp,app}) scripts/definitions/en/definitions.js -->
     <script src="scripts/definitions/en/DestinyClassDefinition.js"></script>
+    <script src="scripts/definitions/en/DestinyEmblemDefinitions.js"></script>
     <script src="scripts/definitions/en/DestinyArmorDefinition.js"></script>
+    <script src="scripts/definitions/en/DestinyTalentGridDefinition.js"></script>
     <script src="scripts/definitions/en/DestinyPrimaryWeaponDefinitions.js"></script>
     <script src="scripts/definitions/en/DestinySpecialWeaponDefinitions.js"></script>
     <script src="scripts/definitions/en/DestinyHeavyWeaponDefinitions.js"></script>
