--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,8 @@
     <title>Destiny Trials Report</title>
     <meta name="description" content="Destiny Trials Report is the ultimate companion for Destiny's Trials of Osiris.
       Look up a Guardian to see every statistic you can imagine on the enemy Fireteam. Be prepared going into a match, and it may even improve your game.">
-    <meta name="keywords" content="destiny,trials of osiris,crucible,trials report,destiny trials report,trials,destiny trials">
+    <meta name="keywords"
+          content="destiny,trials of osiris,crucible,trials report,destiny trials report,trials,destiny trials,destiny trials scout,osiris scout,trials loadouts,destiny osiris,destiny osiris search">
     <meta name="robots" content="index, follow">
     <meta name="fragment" content="!">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -13,6 +14,8 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css" />
     <link rel="stylesheet" href="bower_components/angular-toastr/dist/angular-toastr.css" />
+    <link rel="stylesheet" href="bower_components/github-fork-ribbon-css/gh-fork-ribbon.css" />
+    <link rel="stylesheet" href="bower_components/github-fork-ribbon-css/gh-fork-ribbon.ie.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -74,6 +77,9 @@
     <script src="bower_components/angular-toastr/dist/angular-toastr.tpls.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap.js"></script>
+    <script src="bower_components/momentjs/moment.js"></script>
+    <script src="bower_components/humanize-duration/humanize-duration.js"></script>
+    <script src="bower_components/angular-timer/dist/angular-timer.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -103,5 +109,11 @@
     <script src="scripts/factories/weapon.js"></script>
     <script src="scripts/factories/class.js"></script>
     <!-- endbuild -->
+
+    <div class="github-fork-ribbon-wrapper right-bottom">
+      <div class="github-fork-ribbon">
+        <a href="https://github.com/simonwhitaker/github-fork-ribbon-css">Fork me on GitHub</a>
+      </div>
+    </div>
   </body>
 </html>
