--- a/app/index.html
+++ b/app/index.html
@@ -80,6 +80,7 @@
     <script src="bower_components/momentjs/moment.js"></script>
     <script src="bower_components/humanize-duration/humanize-duration.js"></script>
     <script src="bower_components/angular-timer/dist/angular-timer.js"></script>
+    <script src="bower_components/angular-auto-height/dist/auto-height.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
