fix player in parallel for triple permalink

--- a/app/index.html
+++ b/app/index.html
@@ -107,6 +107,9 @@
     <script src="scripts/factories/armor.js"></script>
     <script src="scripts/factories/weapon.js"></script>
     <script src="scripts/factories/class.js"></script>
+    <script src="scripts/directives/weapons.js"></script>
+    <script src="scripts/directives/armor.js"></script>
+    <script src="scripts/directives/stats.js"></script>
     <!-- endbuild -->
 
     <div class="github-fork-ribbon-wrapper right-bottom hidden-xs hidden-sm">
