misc fixes. you must update npm and bower packages!

--- a/app/index.html
+++ b/app/index.html
@@ -112,7 +112,7 @@
     <script src="scripts/directives/stats.js"></script>
     <!-- endbuild -->
 
-    <div class="github-fork-ribbon-wrapper right-bottom hidden-xs hidden-sm">
+    <div class="github-fork-ribbon-wrapper left hidden-xs hidden-sm">
       <div class="github-fork-ribbon">
         <a href="https://github.com/SteffanLong/DestinyTrialsReport">Fork me on GitHub</a>
       </div>
