--- a/app/index.html
+++ b/app/index.html
@@ -85,7 +85,6 @@
     <script src="scripts/definitions/en/DestinyClassDefinition.js"></script>
     <script src="scripts/definitions/en/DestinyEmblemDefinitions.js"></script>
     <script src="scripts/definitions/en/DestinyArmorDefinition.js"></script>
-    <script src="scripts/definitions/en/DestinyTalentGridDefinition.js"></script>
     <script src="scripts/definitions/en/DestinyPrimaryWeaponDefinitions.js"></script>
     <script src="scripts/definitions/en/DestinySpecialWeaponDefinitions.js"></script>
     <script src="scripts/definitions/en/DestinyHeavyWeaponDefinitions.js"></script>
@@ -108,7 +107,9 @@
     <script src="scripts/directives/weapons.js"></script>
     <script src="scripts/directives/armor.js"></script>
     <script src="scripts/directives/stats.js"></script>
+    <script src="scripts/directives/adsense.js"></script>
     <!-- endbuild -->
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
     <div class="github-fork-ribbon-wrapper left hidden-xs hidden-sm">
       <div class="github-fork-ribbon">
