--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
       ;NREUM.info={beacon:"bam.nr-data.net",errorBeacon:"bam.nr-data.net",licenseKey:"6c58d7ee98",applicationID:"9350178",sa:1,agent:"js-agent.newrelic.com/nr-632.min.js"}
     </script>
   </head>
-  <body ng-app="trialsReportApp" class="bg-white">
+  <body ng-app="trialsReportApp" class="bg-default lter">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
