move GitHub to footer & misc changes

--- a/app/index.html
+++ b/app/index.html
@@ -9,12 +9,12 @@
     <meta name="robots" content="index, follow">
     <meta name="fragment" content="!">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <base href="/">
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css" />
     <link rel="stylesheet" href="bower_components/angular-toastr/dist/angular-toastr.css" />
-    <link rel="stylesheet" href="bower_components/github-fork-ribbon-css/gh-fork-ribbon.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -110,10 +110,5 @@
     <!-- endbuild -->
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
-    <div class="github-fork-ribbon-wrapper left hidden-xs hidden-sm">
-      <div class="github-fork-ribbon">
-        <a href="https://github.com/SteffanLong/DestinyTrialsReport">Fork me on GitHub</a>
-      </div>
-    </div>
   </body>
 </html>
