--- a/app/index.html
+++ b/app/index.html
@@ -97,6 +97,7 @@
     <script src="./lib/angular-help-overlay.js"></script>
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/controllers/profile.js"></script>
     <script src="scripts/factories/account.js"></script>
     <script src="scripts/factories/stats.js"></script>
     <script src="scripts/factories/inventory.js"></script>
