refactor material init, fix NaN%, change width

--- a/app/index.html
+++ b/app/index.html
@@ -79,6 +79,7 @@
     <script src="bower_components/angular-timer/dist/angular-timer.js"></script>
     <script src="bower_components/angular-toastr/dist/angular-toastr.tpls.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/arrive/src/arrive.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/bootstrap-material-design/dist/js/material.js"></script>
     <script src="bower_components/bootstrap-material-design/dist/js/ripples.js"></script>
