add some meta keywords

--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Destiny Trials Report is the ultimate companion for Destiny's Trials of Osiris.
       Look up a Guardian to see every statistic you can imagine on the enemy Fireteam. Be prepared going into a match, and it may even improve your game.">
     <meta name="keywords"
-          content="destiny,trials of osiris,crucible,trials report,destiny trials report,trials,destiny trials,destiny trials scout,osiris scout,trials loadouts,destiny osiris,destiny osiris search">
+          content="destiny,trials of osiris,crucible,trials report,destiny trials report,trials,destiny trials,destiny trials scout,osiris scout,trials loadouts,destiny osiris,destiny osiris search,Trials tracker,Trials of osiris lookup,Destiny crucible lookup,trials help,destiny trials tips,trials fireteam,trials tips,trials stats,destiny trials stats">
     <meta name="robots" content="index, follow">
     <meta name="fragment" content="!">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
