--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <div ng-view help-overlay="helpOverlay"></div>
+    <div ng-view></div>
 
     <script>
       !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
@@ -94,8 +94,6 @@
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="./lib/$QDecorator.js"></script>
-    <script src="./lib/chardinjs.min.js"></script>
-    <script src="./lib/angular-help-overlay.js"></script>
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/profile.js"></script>
