refacs and improvements

--- a/app/index.html
+++ b/app/index.html
@@ -81,6 +81,7 @@
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/bootstrap-material-design/dist/js/material.js"></script>
     <script src="bower_components/bootstrap-material-design/dist/js/ripples.js"></script>
+    <script src="bower_components/q/q.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -99,13 +100,13 @@
     <script src="./lib/$QDecorator.js"></script>
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
-    <script src="scripts/controllers/profile.js"></script>
     <script src="scripts/factories/account.js"></script>
     <script src="scripts/factories/stats.js"></script>
     <script src="scripts/factories/inventory.js"></script>
     <script src="scripts/factories/armor.js"></script>
     <script src="scripts/factories/weapon.js"></script>
     <script src="scripts/factories/class.js"></script>
+    <script src="scripts/factories/player.js"></script>
     <script src="scripts/directives/weapons.js"></script>
     <script src="scripts/directives/armor.js"></script>
     <script src="scripts/directives/stats.js"></script>
