css fixes, js optimization, center ad, fix web app titles

--- a/app/index.html
+++ b/app/index.html
@@ -10,8 +10,8 @@
     <meta name="fragment" content="!">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="apple-mobile-web-app-title" content="Destiny Trials Report">
-    <meta name="application-name" content="Destiny Trials Report">
+    <meta name="apple-mobile-web-app-title" content="Trials Report">
+    <meta name="application-name" content="Trials Report">
     <meta name="msapplication-TileColor" content="#000000">
     <meta name="theme-color" content="#000000">
     <base href="/">
@@ -35,7 +35,7 @@
     <link rel="stylesheet" href="bower_components/bootstrap-material-design/dist/css/ripples.css" />
     <!-- endbower -->
     <!-- endbuild -->
-    <!-- build:css(.tmp) styles/main.css -->
+    <!-- build:css(.tmp) styles/app.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
   </head>
@@ -86,7 +86,7 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-    <!-- build:js scripts/definitions/en/definitions.js -->
+    <!-- build:js scripts/app.js -->
     <script src="scripts/definitions/en/DestinyClassDefinition.js"></script>
     <script src="scripts/definitions/en/DestinyEmblemDefinitions.js"></script>
     <script src="scripts/definitions/en/DestinyArmorDefinition.js"></script>
@@ -95,9 +95,6 @@
     <script src="scripts/definitions/en/DestinyHeavyWeaponDefinitions.js"></script>
     <script src="scripts/definitions/en/DestinyMedalDefinition.js"></script>
     <script src="scripts/definitions/en/DestinyTrialsDefinition.js"></script>
-    <!-- endbuild -->
-
-    <!-- build:js scripts/app.js -->
     <script src="lib/$QDecorator.js"></script>
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
