html validator fixes

--- a/app/index.html
+++ b/app/index.html
@@ -1,19 +1,19 @@
 <!doctype html>
-<html ng-app="trialsReportApp">
+<html lang="en" ng-app="trialsReportApp">
   <head>
     <title>Destiny Trials Report</title>
     <meta name="description" content="Destiny Trials Report is the ultimate companion for Destiny's Trials of Osiris.
       Look up a Guardian to see every statistic you can imagine on the enemy Fireteam. Be prepared going into a match, and it may even improve your game.">
-    <meta name="keywords"
-          content="destiny,trials of osiris,crucible,trials report,destiny trials report,trials,destiny trials,destiny trials scout,osiris scout,trials loadouts,destiny osiris,destiny osiris search,Trials tracker,Trials of osiris lookup,Destiny crucible lookup,trials help,destiny trials tips,trials fireteam,trials tips,trials stats,destiny trials stats">
+    <meta name="keywords" content="destiny,trials of osiris,crucible,trials report,destiny trials report,trials,destiny trials,destiny trials scout,osiris scout,trials loadouts,destiny osiris,destiny osiris search,Trials tracker,Trials of osiris lookup,Destiny crucible lookup,trials help,destiny trials tips,trials fireteam,trials tips,trials stats,destiny trials stats">
     <meta name="robots" content="index, follow">
     <meta name="fragment" content="!">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="apple-mobile-web-app-title" content="Trials Report">
     <meta name="application-name" content="Trials Report">
     <meta name="msapplication-TileColor" content="#000000">
     <meta name="theme-color" content="#000000">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <base href="/">
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
