cleanup and add constant js

--- a/app/index.html
+++ b/app/index.html
@@ -95,6 +95,7 @@
     <script src="scripts/definitions/en/DestinyHeavyWeaponDefinitions.js"></script>
     <script src="scripts/definitions/en/DestinyMedalDefinition.js"></script>
     <script src="scripts/definitions/en/DestinyTrialsDefinition.js"></script>
+    <script src="scripts/definitions/DestinyConstants.js"></script>
     <script src="lib/$QDecorator.js"></script>
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
