--- a/app/index.html
+++ b/app/index.html
@@ -100,6 +100,8 @@
     <script src="lib/$QDecorator.js"></script>
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/controllers/player.js"></script>
+    <script src="scripts/controllers/header.js"></script>
     <script src="scripts/factories/account.js"></script>
     <script src="scripts/factories/stats.js"></script>
     <script src="scripts/factories/inventory.js"></script>
