--- a/app/index.html
+++ b/app/index.html
@@ -102,6 +102,7 @@
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/player.js"></script>
     <script src="scripts/controllers/header.js"></script>
+    <script src="scripts/factories/user.js"></script>
     <script src="scripts/factories/account.js"></script>
     <script src="scripts/factories/stats.js"></script>
     <script src="scripts/factories/inventory.js"></script>
