support for german and spanish

--- a/app/index.html
+++ b/app/index.html
@@ -89,12 +89,8 @@
 
     <!-- build:js scripts/app.js -->
     <script src="scripts/definitions/DestinyConstants.js"></script>
-    <script src="scripts/definitions/en/DestinyArmorDefinition.js"></script>
-    <script src="scripts/definitions/en/DestinyCrucibleMapDefinition.js"></script>
+    <locale-definitions></locale-definitions>
     <script src="scripts/definitions/en/DestinyHazardDefinition.js"></script>
-    <script src="scripts/definitions/en/DestinyMedalDefinition.js"></script>
-    <script src="scripts/definitions/en/DestinySubclassDefinition.js"></script>
-    <script src="scripts/definitions/en/DestinyWeaponDefinition.js"></script>
     <script src="lib/$QDecorator.js"></script>
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
