--- a/app/index.html
+++ b/app/index.html
@@ -96,6 +96,7 @@
     <script src="scripts/definitions/en/DestinySubclassDefinition.js"></script>
     <script src="scripts/definitions/en/DestinyWeaponDefinition.js"></script>
     <script src="lib/$QDecorator.js"></script>
+    <script src="lib/scream.js"></script>
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/player.js"></script>
@@ -110,6 +111,34 @@
     <script src="scripts/directives/stats.js"></script>
     <script src="scripts/directives/adsense.js"></script>
     <!-- endbuild -->
+
+    <script>
+      window.addEventListener('DOMContentLoaded', function () {
+        var isSafari = !!navigator.userAgent.match(/Version\/[\d\.]+.*Safari/);
+        if (isSafari) {
+          var scream,
+            setViewportClass;
+          scream = gajus.Scream();
+
+          setViewportClass = function () {
+            if (scream.isMinimalView()) {
+              $("#controls-wrapper").removeClass("not-min");
+            } else {
+              $("#controls-wrapper").addClass("not-min");
+            }
+          };
+
+          setViewportClass();
+          $('body').on('click touchstart', 'div.controls__expand', function(){
+            setViewportClass();
+          });
+
+          scream.on('viewchange', function (e) {
+            setViewportClass();
+          });
+        }
+      });
+    </script>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
