--- a/app/index.html
+++ b/app/index.html
@@ -7,8 +7,11 @@
     <meta name="keywords" content="destiny,trials of osiris,crucible,trials report,destiny trials report,trials,destiny trials,destiny trials scout,osiris scout,trials loadouts,destiny osiris,destiny osiris search,Trials tracker,Trials of osiris lookup,Destiny crucible lookup,trials help,destiny trials tips,trials fireteam,trials tips,trials stats,destiny trials stats">
     <meta name="robots" content="index, follow">
     <meta name="fragment" content="!">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Trials Report">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="application-name" content="Trials Report">
     <meta name="msapplication-TileColor" content="#000000">
     <meta name="theme-color" content="#000000">
