Restyled FAB button, some performance improvements hopefully

--- a/app/index.html
+++ b/app/index.html
@@ -112,6 +112,7 @@
     <script src="scripts/directives/armor.js"></script>
     <script src="scripts/directives/stats.js"></script>
     <script src="scripts/directives/adsense.js"></script>
+    <script src="scripts/directives/mobile-click.js"></script>
     <!-- endbuild -->
 
     <script>
