--- a/app/index.html
+++ b/app/index.html
@@ -87,6 +87,7 @@
     <script src="bower_components/bootstrap-material-design/dist/js/material.js"></script>
     <script src="bower_components/bootstrap-material-design/dist/js/ripples.js"></script>
     <script src="bower_components/ngstorage/ngStorage.js"></script>
+    <script src="bower_components/ng-fastclick/dist/index.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
