--- a/app/index.html
+++ b/app/index.html
@@ -114,6 +114,7 @@
     <script src="scripts/directives/stats.js"></script>
     <script src="scripts/directives/adsense.js"></script>
     <script src="scripts/directives/mobile-click.js"></script>
+    <script src="scripts/directives/caroussel.js"></script>
     <!-- endbuild -->
 
     <script>
