--- a/app/index.html
+++ b/app/index.html
@@ -108,6 +108,7 @@
     <script src="scripts/factories/stats.js"></script>
     <script src="scripts/factories/inventoryService.js"></script>
     <script src="scripts/factories/inventory.js"></script>
+    <script src="scripts/factories/custom-swipe.js"></script>
     <script src="scripts/directives/weapons.js"></script>
     <script src="scripts/directives/armor.js"></script>
     <script src="scripts/directives/stats.js"></script>
