--- a/app/index.html
+++ b/app/index.html
@@ -113,6 +113,7 @@
     <script src="scripts/directives/stats.js"></script>
     <script src="scripts/directives/adsense.js"></script>
     <script src="scripts/directives/mobile-click.js"></script>
+    <script src="scripts/directives/xpull.js"></script>
     <script src="scripts/directives/caroussel.js"></script>
     <!-- endbuild -->
 
