--- a/app/index.html
+++ b/app/index.html
@@ -86,6 +86,7 @@
     <script src="bower_components/bootstrap-material-design/dist/js/ripples.js"></script>
     <script src="bower_components/ngstorage/ngStorage.js"></script>
     <script src="bower_components/xpull/xpull.js"></script>
+    <script src="bower_components/underscore/underscore.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -99,11 +100,17 @@
     <script src="scripts/definitions/en/DestinyWeaponDefinition.js"></script>
     <script src="lib/$QDecorator.js"></script>
     <script src="scripts/app.js"></script>
+    <script src="scripts/services/api.js"></script>
+    <script src="scripts/services/bungie.js"></script>
+    <script src="scripts/services/guardian.gg.js"></script>
+    <script src="scripts/services/util.js"></script>
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/player.js"></script>
     <script src="scripts/controllers/header.js"></script>
     <script src="scripts/factories/player.js"></script>
+    <script src="scripts/factories/trialsReport.js"></script>
     <script src="scripts/factories/account.js"></script>
+    <script src="scripts/factories/guardian.gg.js"></script>
     <script src="scripts/factories/stats.js"></script>
     <script src="scripts/factories/inventoryService.js"></script>
     <script src="scripts/factories/inventory.js"></script>
