better date logic and fix lint issues

--- a/app/index.html
+++ b/app/index.html
@@ -100,6 +100,7 @@
     <script src="scripts/definitions/en/DestinyWeaponDefinition.js"></script>
     <script src="lib/$QDecorator.js"></script>
     <script src="scripts/app.js"></script>
+    <script src="scripts/routes.js"></script>
     <script src="scripts/services/api.js"></script>
     <script src="scripts/services/bungie.js"></script>
     <script src="scripts/services/guardian.gg.js"></script>
