refactor last matches

--- a/app/index.html
+++ b/app/index.html
@@ -115,6 +115,8 @@
     <script src="components/inventory/inventory.service.js"></script>
     <script src="components/inventory/inventory.factory.js"></script>
     <script src="components/inventory/inventory.directive.js"></script>
+    <script src="components/matches/matches.factory.js"></script>
+    <script src="components/matches/matches.directive.js"></script>
     <script src="components/stats/stats.factory.js"></script>
     <script src="components/stats/stats.directive.js"></script>
     <script src="shared/factories/customSwipe.factory.js"></script>
