Move API functionality inside main application

--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
     <link rel="icon" type="image/png" href="assets/img/favicon-96x96.png" sizes="96x96">
     <link rel="icon" type="image/png" href="assets/img/favicon-16x16.png" sizes="16x16">
     <link rel="manifest" href="./manifest.json">
-    <!-- build:css(.) styles/vendor.css -->
+    <!-- build:css(.) assets/css/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css" />
     <link rel="stylesheet" href="bower_components/angular-motion/dist/angular-motion.css" />
@@ -49,7 +49,7 @@
 
     <div ng-view></div>
 
-    <!-- build:js(.) scripts/vendor.js -->
+    <!-- build:js(.) assets/js/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
@@ -68,7 +68,7 @@
     <script src="bower_components/angulartics/src/angulartics-intercom.js"></script>
     <script src="bower_components/angulartics/src/angulartics-inspectlet.js"></script>
     <script src="bower_components/angulartics/src/angulartics-newrelic-insights.js"></script>
-    <script src="bower_components/angulartics-google-analytics/dist/angulartics-google-analytics.min.js"></script>
+    <script src="bower_components/angulartics-google-analytics/lib/angulartics-google-analytics.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/angular-loading-bar/build/loading-bar.js"></script>
@@ -90,7 +90,7 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-    <!-- build:js scripts/app.js -->
+    <!-- build:js app.js -->
     <script src="shared/definitions/DestinyConstants.js"></script>
     <script src="shared/definitions/en/DestinyArmorDefinition.js"></script>
     <script src="shared/definitions/en/DestinyCrucibleMapDefinition.js"></script>
@@ -98,6 +98,7 @@
     <script src="shared/definitions/en/DestinyMedalDefinition.js"></script>
     <script src="shared/definitions/en/DestinySubclassDefinition.js"></script>
     <script src="shared/definitions/en/DestinyWeaponDefinition.js"></script>
+    <script src="shared/definitions/en/DestinyTalentGridDefinition.js"></script>
     <script src="assets/js/$QDecorator.js"></script>
     <script src="app.module.js"></script>
     <script src="app.routes.js"></script>
