further normalizations to popovers, ng-bind fixes

--- a/app/shared/popovers/gggElo.popover.html
+++ b/app/shared/popovers/gggElo.popover.html
@@ -1,8 +1,8 @@
-<div class="popover ggg-elo {{content.tier.toLowerCase()}}" tabindex="-1" ng-show="content">
+<div class="popover ggg-elo {{player.ggg.tier.toLowerCase()}}" tabindex="-1" ng-show="player.ggg">
   <div class="arrow"></div>
-  <h3 class="popover-title" ng-bind="content.tier"></h3>
+  <h3 class="popover-title" ng-bind="player.ggg.tier"></h3>
   <div class="popover-content">
-    <div class="elo"><span ng-bind="content.elo"></span></div>
-    <div class="rank"><span ng-bind="content.rank"></span></div>
+    <div class="elo"><span ng-bind="player.ggg.elo"></span></div>
+    <div class="rank"><span ng-bind="player.ggg.rank"></span></div>
   </div>
 </div>
