--- a/app/index.html
+++ b/app/index.html
@@ -87,6 +87,7 @@
     <script src="bower_components/ngstorage/ngStorage.js"></script>
     <script src="bower_components/xpull/xpull.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
+    <script src="bower_components/angularUtils-pagination/dirPagination.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
